--- a/sample1.html
+++ b/sample1.html
@@ -4,62 +4,31 @@
     <meta charset="utf-8">
     <title>位置情報取得サンプル2</title>
     <!-- 動作処理 -->
-    <script>
-        // 現在地取得処理
-        function initMap() {
-            // Geolocation APIに対応している
-            if (navigator.geolocation) {
-                // 現在地を取得
-                navigator.geolocation.getCurrentPosition(
-                    // 取得成功した場合
-                    function(position) {
-                        // 緯度・経度を変数に格納
-                        var mapLatLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-                        // マップオプションを変数に格納
-                        var mapOptions = {
-                            zoom : 15,          // 拡大倍率
-                            center : mapLatLng  // 緯度・経度
-                        };
-                        // マップオブジェクト作成
-                        var map = new google.maps.Map(
-                            document.getElementById("map"), // マップを表示する要素
-                            mapOptions         // マップオプション
-                        );
-                        //　マップにマーカーを表示する
-                        var marker = new google.maps.Marker({
-                            map : map,             // 対象の地図オブジェクト
-                            position : mapLatLng   // 緯度・経度
-                        });
-                    },
-                    // 取得失敗した場合
-                    function(error) {
-                        // エラーメッセージを表示
-                        switch(error.code) {
-                            case 1: // PERMISSION_DENIED
-                                alert("位置情報の利用が許可されていません");
-                            break;
-                            case 2: // POSITION_UNAVAILABLE
-                                alert("現在位置が取得できませんでした");
-                            break;
-                            case 3: // TIMEOUT
-                                alert("タイムアウトになりました");
-                            break;
-                            default:
-                                alert("その他のエラー(エラーコード:"+error.code+")");
-                            break;
-                        }
-                    }
-                );
-                // Geolocation APIに対応していない
-            } else {
-                alert("この端末では位置情報が取得できません");
-            }
-        }
-    </script>
+
 </head>
 <body>
 <h1>位置情報取得サンプル2</h1>
 <div id="map" style="width:400px; height:300px"></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=取得したAPIキー=initMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVr833oGTaZRe42zZMMlvIASYctDH6Ct8&callback=initMap"></script>
+<script>
+    function init() {
+        <!-- マップデザイン -->
+        var mapOptions = { "center":
+            {  "lat": 33.834161,  "lng": 132.7660678 }, "clickableIcons": true, "disableDoubleClickZoom": false, "draggable": true, "fullscreenControl": true, "keyboardShortcuts": true, "mapMaker": false, "mapTypeControl": true, "mapTypeControlOptions": {  "text": "Default (depends on viewport size etc.)",  "style": 0 }, "mapTypeId": "roadmap", "rotateControl": true, "scaleControl": true, "scrollwheel": true, "streetViewControl": true, "styles": [  {   "featureType": "all",   "elementType": "labels.text.fill",   "stylers": [    {     "saturation": 36    },    {     "color": "#ffffff"    },    {     "lightness": 40    }   ]  },  {   "featureType": "all",   "elementType": "labels.text.stroke",   "stylers": [    {     "visibility": "off"    },    {     "color": "#000000"    },    {     "lightness": 16    }   ]  },  {   "featureType": "all",   "elementType": "labels.icon",   "stylers": [    {     "visibility": "off"    }   ]  },  {   "featureType": "administrative",   "elementType": "geometry.fill",   "stylers": [    {     "color": "#c0c0c0"    },    {     "lightness": 20    },    {     "visibility": "on"    }   ]  },  {   "featureType": "administrative",   "elementType": "geometry.stroke",   "stylers": [    {     "color": "#000000"    },    {     "lightness": 17    },    {     "weight": 1.2    },    {     "visibility": "off"    }   ]  },  {   "featureType": "landscape",   "elementType": "geometry",   "stylers": [    {     "color": "#000000"    },    {     "lightness": 20    }   ]  },  {   "featureType": "landscape",   "elementType": "geometry.fill",   "stylers": [    {     "color": "#3f3f3f"    }   ]  },  {   "featureType": "landscape",   "elementType": "geometry.stroke",   "stylers": [    {     "visibility": "off"    }   ]  },  {   "featureType": "landscape.man_made",   "elementType": "geometry.fill",   "stylers": [    {     "color": "#333333"    },    {     "visibility": "on"    },    {     "saturation": "0"    },    {     "lightness": "0"    },    {     "gamma": "1.00"    }   ]  },  {   "featureType": "landscape.man_made",   "elementType": "geometry.stroke",   "stylers": [    {     "visibility": "off"    }   ]  },  {   "featureType": "landscape.natural",   "elementType": "geometry.fill",   "stylers": [    {     "color": "#2b2b2b"    },    {     "visibility": "on"    },    {     "gamma": "1"    },    {     "lightness": "0"    },    {     "saturation": "0"    }   ]  },  {   "featureType": "landscape.natural",   "elementType": "geometry.stroke",   "stylers": [    {     "visibility": "off"    }   ]  },  {   "featureType": "landscape.natural.landcover",   "elementType": "geometry.fill",   "stylers": [    {     "visibility": "off"    },    {     "color": "#ff0000"    }   ]  },  {   "featureType": "landscape.natural.landcover",   "elementType": "geometry.stroke",   "stylers": [    {     "visibility": "off"    }   ]  },  {   "featureType": "landscape.natural.terrain",   "elementType": "geometry.fill",   "stylers": [    {     "visibility": "on"    },    {     "color": "#222222"    }   ]  },  {   "featureType": "landscape.natural.terrain",   "elementType": "geometry.stroke",   "stylers": [    {     "visibility": "off"    }   ]  },  {   "featureType": "poi",   "elementType": "geometry",   "stylers": [    {     "color": "#000000"    },    {     "lightness": 21    }   ]  },  {   "featureType": "poi",   "elementType": "geometry.fill",   "stylers": [    {     "color": "#4a4a4a"    },    {     "visibility": "on"    }   ]  },  {   "featureType": "road.highway",   "elementType": "geometry.fill",   "stylers": [    {     "color": "#ac9455"    },    {     "lightness": "0"    },    {     "gamma": "1.00"    }   ]  },  {   "featureType": "road.highway",   "elementType": "geometry.stroke",   "stylers": [    {     "color": "#000000"    },    {     "lightness": 29    },    {     "weight": 0.2    }   ]  },  {   "featureType": "road.arterial",   "elementType": "geometry",   "stylers": [    {     "color": "#ac9455"    },    {     "lightness": "0"    }   ]  },  {   "featureType": "road.arterial",   "elementType": "geometry.fill",   "stylers": [    {     "color": "#ac9455"    }   ]  },  {   "featureType": "road.arterial",   "elementType": "geometry.stroke",   "stylers": [    {     "visibility": "off"    }   ]  },  {   "featureType": "road.local",   "elementType": "geometry",   "stylers": [    {     "color": "#000000"    },    {     "lightness": 16    }   ]  },  {   "featureType": "road.local",   "elementType": "geometry.fill",   "stylers": [    {     "color": "#222222"    }   ]  },  {   "featureType": "road.local",   "elementType": "geometry.stroke",   "stylers": [    {     "visibility": "off"    }   ]  },  {   "featureType": "transit",   "elementType": "geometry",   "stylers": [    {     "color": "#000000"    },    {     "lightness": 19    }   ]  },  {   "featureType": "water",   "elementType": "geometry",   "stylers": [    {     "color": "#000000"    },    {     "lightness": 17    }   ]  },  {   "featureType": "water",   "elementType": "geometry.fill",   "stylers": [    {     "color": "#1a1a1a"    }   ]  } ], "zoom": 15, "zoomControl": true};
+        var mapElement = document.getElementById('ez-map');
+        var map = new google.maps.Map(mapElement, mapOptions);
+        google.maps.event.addDomListener(window, "resize", function() { var center = map.getCenter(); google.maps.event.trigger(map, "resize"); map.setCenter(center); });
+    }
+    google.maps.event.addDomListener(window, 'load', init);
+</script>
+<style>
+    #ez-map{min-height:150px;min-width:150px;height: 420px;width: 100%;}
+    #ez-map .infoTitle{}
+    #ez-map .infoWebsite{}
+    #ez-map .infoEmail{}
+    #ez-map .infoTelephone{}
+    #ez-map .infoDescription{}
+</style>
+<div id='ez-map'></div>
 </body>
 </html>
