--- a/sample1.html
+++ b/sample1.html
@@ -9,7 +9,7 @@
 <body>
 <h1>位置情報取得サンプル2</h1>
 <div id="map" style="width:400px; height:300px"></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVr833oGTaZRe42zZMMlvIASYctDH6Ct8&callback=initMap"></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=APIキー=initMap"></script>
 <script>
     function init() {
         <!-- マップデザイン -->
