jsファイルを別ファイルに記述

--- a/sample1.html
+++ b/sample1.html
@@ -1,230 +1,60 @@
 <!DOCTYPE html>
-<html>
-<head>
-    <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-    <meta charset="utf-8">
-    <title>Directions service</title>
-    <style>
+<html lang="ja">
+    <head>
+      <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
+     <meta charset="utf-8">
+     <title>Directions service</title>
+     <script src="MapConfiguration.js"></script>
+     <style>
+         /* Always set the map height explicitly to define the size of the div
+          * element that contains the map.(常に地図の高さを明示的に設定してdivのサイズを定義する
+          *マップを含む要素。) */
+         #map {
+             height: 100%;
+         }
+         /* Optional: Makes the sample page fill the window. (オプション：サンプルページをウィンドウに塗りつぶします。)*/
+         html, body {
+             height: 100%;
+             margin: 0;
+             padding: 0;
+         }
+         #floating-panel {
+             position: absolute;
+             top: 10px;
+             left: 25%;
+             z-index: 5;
+             background-color: #fff;
+             padding: 5px;
+             border: 1px solid #999;
+             text-align: center;
+             font-family: 'Roboto','sans-serif';
+             line-height: 30px;
+             padding-left: 10px;
+         }
+     </style>
+    </head>
+    <body>
+    <div id="floating-panel">
+     <b>現在地: </b>
+     <select id="start">
+         <option value="現在地">現在地</option>
+     </select>
+     <b>目的地: </b>
 
-        /* Always set the map height explicitly to define the size of the div
-         * element that contains the map.(常に地図の高さを明示的に設定してdivのサイズを定義する
-         *マップを含む要素。) */
-        #map {
-            height: 100%;
-        }
-        /* Optional: Makes the sample page fill the window. (オプション：サンプルページをウィンドウに塗りつぶします。)*/
-        html, body {
-            height: 100%;
-            margin: 0;
-            padding: 0;
-        }
-        #floating-panel {
-            position: absolute;
-            top: 10px;
-            left: 25%;
-            z-index: 5;
-            background-color: #fff;
-            padding: 5px;
-            border: 1px solid #999;
-            text-align: center;
-            font-family: 'Roboto','sans-serif';
-            line-height: 30px;
-            padding-left: 10px;
-        }
-    </style>
-</head>
-<body>
-<div id="floating-panel">
-    <b>現在地: </b>
-    <select id="start">
-        <option value="現在地">現在地</option>
-    </select>
-    <b>目的地: </b>
+     <select id="end">
+         <option value="河原電子ビジネス専門学校, il">河原電子ビジネス専門学校</option>
+         <option value="松山ビジネスカレッジ">MBC</option>
+         <option value="愛媛県西条市">西条</option>
+         <option value="東京">東京</option>
+         <option value="愛媛県立西条農業高等学校">愛媛県立西条農業高等学校</option>
+         <option value="青森県">青森県</option>
+         <option value="松山コミュニティセンター">松山コミュニティセンター</option>
+     </select>
+    </div>
+    <div id="map"></div>
+      <h1>位置情報取得サンプル2</h1>
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVr833oGTaZRe42zZMMlvIASYctDH6Ct8&callback=initMap"></script>
 
-    <select id="end">
-        <option value="河原電子ビジネス専門学校, il">河原電子ビジネス専門学校</option>
-        <option value="松山ビジネスカレッジ">MBC</option>
-        <option value="愛媛県西条市">西条</option>
-        <option value="東京">東京</option>
-        <option value="愛媛県立西条農業高等学校">愛媛県立西条農業高等学校</option>
-        <option value="青森県">青森県</option>
-        <option value="松山コミュニティセンター">松山コミュニティセンター</option>
-    </select>
-</div>
-<div id="map"></div>
-<script>
-    /**
-     * Created by kbc16a21 on 2017/10/26.
-     */
-// 現在地取得処理
-    function initMap() {
-        // Geolocation APIに対応している
-        if (navigator.geolocation) {
-            // 現在地を取得
-            navigator.geolocation.getCurrentPosition(
-                // 取得成功した場合
-                function(position) {
-                    // 緯度・経度を変数に格納
-                    var mapLatLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-
-                    var directionsService = new google.maps.DirectionsService;
-                    var directionsDisplay = new google.maps.DirectionsRenderer;
-
-                    // マップオプションを変数に格納
-                    var map = new google.maps.Map(document.getElementById('map'), {
-                        zoom: 15,
-                        center: {lat: 33.8436233, lng: 132.7564573},
-                        "clickableIcons": true, "disableDoubleClickZoom": false, "draggable": true, "fullscreenControl": true,
-                        "keyboardShortcuts": true, "mapMaker": false, "mapTypeControl": true, "mapTypeControlOptions":
-                            {  "text": "Default (depends on viewport size etc.)",  "style": 0 }, "mapTypeId": "roadmap", "rotateControl": true, "scaleControl": true,
-                        "scrollwheel": true, "streetViewControl": true, "styles":
-                            [
-                                {   "featureType": "all",   "elementType": "labels.text.fill",   "stylers": [
-                                    {     "saturation": 36    },    {     "color": "#ffffff"    },    {     "lightness": 40    }   ]    },
-                                {   "featureType": "all",   "elementType": "labels.text.stroke",   "stylers": [
-                                    {     "visibility": "off"    },    {     "color": "#000000"    },    {     "lightness": 16    }   ] },
-                                {   "featureType": "all",   "elementType": "labels.icon",   "stylers": [
-                                    {     "visibility": "off"    }   ]  },
-                                {   "featureType": "administrative",   "elementType": "geometry.fill",   "stylers": [
-                                    {     "color": "#c0c0c0"    },    {     "lightness": 20    },    {     "visibility": "on"    }   ]  },
-                                {   "featureType": "administrative",   "elementType": "geometry.stroke",   "stylers": [
-                                    {     "color": "#000000"    },    {     "lightness": 17    },    {     "weight": 1.2    },    {     "visibility": "off"    }   ]    },
-                                {   "featureType": "landscape",   "elementType": "geometry",   "stylers": [
-                                    {     "color": "#000000"    },    {     "lightness": 20    }   ]    },
-                                {   "featureType": "landscape",   "elementType": "geometry.fill",   "stylers": [
-                                    {     "color": "#3f3f3f"    }   ]  },
-                                {   "featureType": "landscape",   "elementType": "geometry.stroke",   "stylers": [
-                                    {     "visibility": "off"    }   ]  },
-                                {   "featureType": "landscape.man_made",   "elementType": "geometry.fill",   "stylers": [
-                                    {     "color": "#333333"    },    {     "visibility": "on"    },    {     "saturation": "0"    },    {     "lightness": "0"    },    {     "gamma": "1.00"    }   ]  },
-                                {   "featureType": "landscape.man_made",   "elementType": "geometry.stroke",   "stylers": [
-                                    {     "visibility": "off"    }   ]  },
-                                {   "featureType": "landscape.natural",   "elementType": "geometry.fill",   "stylers": [
-                                    {     "color": "#2b2b2b"    },    {     "visibility": "on"    },    {     "gamma": "1"    },    {     "lightness": "0"    },    {     "saturation": "0"    }   ]  },
-                                {   "featureType": "landscape.natural",   "elementType": "geometry.stroke",   "stylers": [
-                                    {     "visibility": "off"    }   ]  },
-                                {   "featureType": "landscape.natural.landcover",   "elementType": "geometry.fill",   "stylers": [
-                                    {     "visibility": "off"    },    {     "color": "#ff0000"    }   ]  },
-                                {   "featureType": "landscape.natural.landcover",   "elementType": "geometry.stroke",   "stylers": [
-                                    {     "visibility": "off"    }   ]  },
-                                {   "featureType": "landscape.natural.terrain",   "elementType": "geometry.fill",   "stylers": [
-                                    {     "visibility": "on"    },    {     "color": "#222222"    }   ]  },
-                                {   "featureType": "landscape.natural.terrain",   "elementType": "geometry.stroke",   "stylers": [
-                                    {     "visibility": "off"    }   ]  },
-                                {   "featureType": "poi",   "elementType": "geometry",   "stylers": [
-                                    {     "color": "#000000"    },    {     "lightness": 21    }   ]  },
-                                {   "featureType": "poi",   "elementType": "geometry.fill",   "stylers": [
-                                    {     "color": "#4a4a4a"    },    {     "visibility": "on"    }   ]  },
-                                {   "featureType": "road.highway",   "elementType": "geometry.fill",   "stylers": [
-                                    {     "color": "#ac9455"    },    {     "lightness": "0"    },    {     "gamma": "1.00"    }   ]  },
-                                {   "featureType": "road.highway",   "elementType": "geometry.stroke",   "stylers": [
-                                    {     "color": "#000000"    },    {     "lightness": 29    },    {     "weight": 0.2    }   ]  },
-                                {   "featureType": "road.arterial",   "elementType": "geometry",   "stylers": [
-                                    {     "color": "#ac9455"    },    {     "lightness": "0"    }   ]  },
-                                {   "featureType": "road.arterial",   "elementType": "geometry.fill",   "stylers": [
-                                    {     "color": "#ac9455"    }   ]  },
-                                {   "featureType": "road.arterial",   "elementType": "geometry.stroke",   "stylers": [
-                                    {     "visibility": "off"    }   ]  },
-                                {   "featureType": "road.local",   "elementType": "geometry",   "stylers": [
-                                    {     "color": "#000000"    },    {     "lightness": 16    }   ]  },
-                                {   "featureType": "road.local",   "elementType": "geometry.fill",   "stylers": [
-                                    {     "color": "#222222"    }   ]  },
-                                {   "featureType": "road.local",   "elementType": "geometry.stroke",   "stylers": [
-                                    {     "visibility": "off"    }   ]  },
-                                {   "featureType": "transit",   "elementType": "geometry",   "stylers": [
-                                    {     "color": "#000000"    },    {     "lightness": 19    }   ]  },
-                                {   "featureType": "water",   "elementType": "geometry",   "stylers": [
-                                    {     "color": "#000000"    },    {     "lightness": 17    }   ]  },
-                                {   "featureType": "water",   "elementType": "geometry.fill",   "stylers": [
-                                    {     "color": "#1a1a1a"    }   ]  } ]
-                    });
-                    directionsDisplay.setMap(map);
-
-                    var onChangeHandler = function() {
-                        calculateAndDisplayRoute(directionsService, directionsDisplay);
-                    };
-                    document.getElementById('start').addEventListener('change', onChangeHandler);
-                    document.getElementById('end').addEventListener('change', onChangeHandler);
-
-
-                },
-                // 取得失敗した場合
-                function(error) {
-                    // エラーメッセージを表示
-                    switch(error.code) {
-                        case 1: // PERMISSION_DENIED
-                            alert("位置情報の利用が許可されていません");
-                            break;
-                        case 2: // POSITION_UNAVAILABLE
-                            alert("現在位置が取得できませんでした");
-                            break;
-                        case 3: // TIMEOUT
-                            alert("タイムアウトになりました");
-                            break;
-                        default:
-                            alert("その他のエラー(エラーコード:"+error.code+")");
-                            break;
-
-                    }
-                }
-            );
-            // Geolocation APIに対応していない
-        } else {
-            alert("この端末では位置情報が取得できません");
-        }
-    }
-
-    function calculateAndDisplayRoute(directionsService, directionsDisplay) {
-        // Geolocation APIに対応している
-        if (navigator.geolocation) {
-            // 現在地を取得
-            navigator.geolocation.getCurrentPosition(
-                // 取得成功した場合
-                function(position) {
-                    // 緯度・経度を変数に格納
-                    var mapLatLng = new google.maps.LatLng(position.coords.latitude, position.coords.longitude);
-                    directionsService.route({
-                        origin: mapLatLng,
-                        destination: document.getElementById('end').value,
-                        travelMode: 'DRIVING'
-                    }, function(response, mapLatLng) {
-                        if (mapLatLng === 'OK') {
-                            directionsDisplay.setDirections(response);
-                        } else {
-                            window.alert('Directions request failed due to ' + mapLatLng);
-                        }
-                    });
-
-                },
-                // 取得失敗した場合
-                function(error) {
-                    // エラーメッセージを表示
-                    switch(error.code) {
-                        case 1: // PERMISSION_DENIED
-                            alert("位置情報の利用が許可されていません");
-                            break;
-                        case 2: // POSITION_UNAVAILABLE
-                            alert("現在位置が取得できませんでした");
-                            break;
-                        case 3: // TIMEOUT
-                            alert("タイムアウトになりました");
-                            break;
-                        default:
-                            alert("その他のエラー(エラーコード:"+error.code+")");
-                            break;
-
-                    }
-                }
-            );
-            // Geolocation APIに対応していない
-        } else {
-            alert("この端末では位置情報が取得できません");
-        }
-
-    }
-</script>
-<script async defer
-        src="https://maps.googleapis.com/maps/api/js?key=取得したAPIキー&callback=initMap">
-</script>
-</body>
-</html>
+      </div>
+    </body>
+    </html>
