--- a/sample1.html
+++ b/sample1.html
@@ -1,60 +1,9 @@
 <!DOCTYPE html>
-<html lang="ja">
-    <head>
-      <meta name="viewport" content="initial-scale=1.0, user-scalable=no">
-     <meta charset="utf-8">
-     <title>Directions service</title>
-     <script src="MapConfiguration.js"></script>
-     <style>
-         /* Always set the map height explicitly to define the size of the div
-          * element that contains the map.(常に地図の高さを明示的に設定してdivのサイズを定義する
-          *マップを含む要素。) */
-         #map {
-             height: 100%;
-         }
-         /* Optional: Makes the sample page fill the window. (オプション：サンプルページをウィンドウに塗りつぶします。)*/
-         html, body {
-             height: 100%;
-             margin: 0;
-             padding: 0;
-         }
-         #floating-panel {
-             position: absolute;
-             top: 10px;
-             left: 25%;
-             z-index: 5;
-             background-color: #fff;
-             padding: 5px;
-             border: 1px solid #999;
-             text-align: center;
-             font-family: 'Roboto','sans-serif';
-             line-height: 30px;
-             padding-left: 10px;
-         }
-     </style>
-    </head>
-    <body>
-    <div id="floating-panel">
-     <b>現在地: </b>
-     <select id="start">
-         <option value="現在地">現在地</option>
-     </select>
-     <b>目的地: </b>
-
-     <select id="end">
-         <option value="河原電子ビジネス専門学校, il">河原電子ビジネス専門学校</option>
-         <option value="松山ビジネスカレッジ">MBC</option>
-         <option value="愛媛県西条市">西条</option>
-         <option value="東京">東京</option>
-         <option value="愛媛県立西条農業高等学校">愛媛県立西条農業高等学校</option>
-         <option value="青森県">青森県</option>
-         <option value="松山コミュニティセンター">松山コミュニティセンター</option>
-     </select>
-    </div>
-    <div id="map"></div>
-      <h1>位置情報取得サンプル2</h1>
-        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCVr833oGTaZRe42zZMMlvIASYctDH6Ct8&callback=initMap"></script>
-
-      </div>
-    </body>
-    </html>
+<html>
+<head><style>html, body, #map { width: 100%; height: 100%; }</style></head>
+<script src="./MapConfiguration.js"></script>
+<body>
+<div id="map"></div>
+<script src="https://maps.googleapis.com/maps/api/js?key=取得したAPIキー&callback=initMap"></script>
+</body>
+</html>
