--- a/sample1.html
+++ b/sample1.html
@@ -1,9 +1,20 @@
 <!DOCTYPE html>
 <html>
-<head><style>html, body, #map { width: 100%; height: 100%; }</style></head>
-<script src="./MapConfiguration.js"></script>
-<body>
-<div id="map"></div>
-<script src="https://maps.googleapis.com/maps/api/js?key=取得したAPIキー&callback=initMap"></script>
-</body>
+    <header>
+        <div class="header" >
+            <p>
+                <button type="submit" class="header_button"><img src="Add-icon.png" width=25px height=25px/></button>
+            </p>
+        </div>
+    </header>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" type="text/css" href="./css/stallMapCSS.css">
+        <style>html, body, #map { width: 90%; height: 90%; }</style>
+    </head>
+    <script src="./js/Samplejs.js"></script>
+    <body>
+		<div id="map"></div>
+		<script src="https://maps.googleapis.com/maps/api/js?key=取得したAPIキー&callback=initMap"></script>
+	</body>
 </html>
