マップ初期化機能追加

--- a/sample1.html
+++ b/sample1.html
@@ -5,5 +5,8 @@
 <body>
 <div id="map"></div>
 <script src="https://maps.googleapis.com/maps/api/js?key=取得したAPIキー&callback=initMap"></script>
+
+<input type="button" id="btn2" value="マップ初期化" onclick="initMap()" />
+
 </body>
 </html>
